--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -24,6 +24,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="dist/bundle.js"></script>
   </body>
 </html>
