--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div id="info">
         <h1>Address of the new admin</h1>
-        <input type="text" />
+        <input type="text" id="address-input" />
         <button id="permission-btn">Giving Permission</button>
       </div>
       <div class="members">
