working on frontend

--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -8,19 +8,19 @@
     <title>SkyBlock</title>
   </head>
   <body>
-    <button id="connect-btn">Connect your wallet</button>
+    <!-- <button id="connect-btn">Connect your wallet</button> -->
     <div class="container">
       <div id="info">
         <h1>Address of the new admin</h1>
         <input type="text" id="address-input" />
-        <button id="permission-btn">Giving Permission</button>
+        <button id="permission-btn">Nominate Admin</button>
       </div>
       <div class="members">
-        <div class="list" id="dao-member-list">
+        <div class="list" id="dao-admin-list">
           <h2>DAO admins</h2>
         </div>
-        <div class="list">
-          <h2>Waiting for confirmation</h2>
+        <div class="list" id="admin-nominees-list">
+          <h2>Admin Nominees</h2>
         </div>
       </div>
     </div>
