add infra and deploy

--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -39,6 +39,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="dist/bundle.js"></script>
+    <script type="module" src="bundle.js"></script>
   </body>
 </html>
