--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -16,6 +16,7 @@
         <div id="info">
           <h1>Address of the new admin</h1>
           <input type="text" id="address-input" />
+          <input type="text" class="hide" id="email-input" />
           <button id="permission-btn">Nominate Admin</button>
         </div>
         <div class="members">
