--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -2,44 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/SkyBlock-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet" type="text/css" />
     <title>SkyBlock</title>
   </head>
   <body>
-    <!-- <button id="connect-btn">Connect your wallet</button> -->
-    <div class="container">
-      <button id="permission-page-btn">Permission</button>
-      <button id="decrypting-page-btn">Decrypting</button>
-      <div id="permission-container" class="display">
-        <div id="info">
-          <h1>Address of the new admin</h1>
-          <input type="text" id="address-input" />
-          <input type="text" class="hide" id="email-input" />
-          <button id="permission-btn">Nominate Admin</button>
-        </div>
-        <div class="members">
-          <div class="list" id="dao-admin-list">
-            <h2>DAO admins</h2>
-          </div>
-          <div class="list" id="admin-nominees-list">
-            <h2>Admin Nominees</h2>
-          </div>
-        </div>
-      </div>
-
-      <div id="decrypt-container" class="hide">
-        <div id="info">
-          <h1>Decrypt your password</h1>
-          <input type="text" id="decrypt-input" />
-          <button id="decrypt-btn">Decrypt</button>
-        </div>
-        <div class="password">
-          <label id="decrypted-password"></label>
-        </div>
-      </div>
-    </div>
-    <script type="module" src="bundle.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
